test/expected/cli/shitbox_resolution.out
=== shitbox prefix always works ===
1
2
3
=== default mood, empty PATH, falls back to shitbox ===
1
2
3
rc=0
=== sh mood, empty PATH, not found ===
shit: 1:8: error: Program `seq` wasn't found.
     1 |  PATH=; seq 3
       |         ^~~~~ here.
note: Did you mean `set`?
shit: 1:0: trace location:
     1 |  SHIT --mood sh -c 'PATH=; seq 3'
rc=127
=== set -o shitbox turns bare names on ===
1
2
3
=== --enable-shitbox turns bare names on ===
1
2
3
=== a builtin name is not a shitbox utility ===
shit: 1:9: error: shitbox has no utility named 'echo'.
     1 |  shitbox echo routed via shitbox
       |          ^~~~ here.
rc=1
=== the shitbox name does not recurse ===
shit: 1:9: error: shitbox has no utility named 'shitbox'.
     1 |  shitbox shitbox
       |          ^~~~~~~ here.
rc=1
=== unknown utility errors ===
shit: 1:9: error: shitbox has no utility named 'nope'.
     1 |  shitbox nope
       |          ^~~~ here.
rc=1
